; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmpmap.c_snmp_lookup_enumoid.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmpmap.c_snmp_lookup_enumoid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_toolinfo = type { i32 }
%struct.snmp_object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snmp_lookup_enumoid(%struct.snmp_toolinfo* %0, %struct.snmp_object* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snmp_toolinfo*, align 8
  %6 = alloca %struct.snmp_object*, align 8
  %7 = alloca i8*, align 8
  store %struct.snmp_toolinfo* %0, %struct.snmp_toolinfo** %5, align 8
  store %struct.snmp_object* %1, %struct.snmp_object** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %5, align 8
  %9 = icmp eq %struct.snmp_toolinfo* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load %struct.snmp_object*, %struct.snmp_object** %6, align 8
  %12 = icmp eq %struct.snmp_object* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %3
  store i32 -1, i32* %4, align 4
  br label %20

14:                                               ; preds = %10
  %15 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %5, align 8
  %16 = getelementptr inbounds %struct.snmp_toolinfo, %struct.snmp_toolinfo* %15, i32 0, i32 0
  %17 = load %struct.snmp_object*, %struct.snmp_object** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @snmp_lookup_oidlist(i32* %16, %struct.snmp_object* %17, i8* %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %14, %13
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @snmp_lookup_oidlist(i32*, %struct.snmp_object*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
